# DaseS

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/commands/: search_semantic_articles.md
.claude/rules/: backend.md  frontend.md
.gemini/: settings.json
.gemini/commands/: search_semantic_articles.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  mcp_auth.py  mcp_server.py
backend/app/agents/: __init__.py  analyzer.py  coordinator.py  retriever.py  summarizer.py
backend/app/api/: __init__.py  agents.py  chat.py  prompts.py  search.py  traces.py
backend/app/core/: __init__.py  config.py  deps.py
backend/app/models/: __init__.py  schemas.py
backend/app/rag/: __init__.py  chunker.py  parser.py  retriever.py
backend/app/services/: __init__.py  es_service.py  prompt_service.py
backend/tests/: __init__.py
data/scripts/: README.md  analyze_es_abstracts_v3.py  ingest_dblp.py  ingest_dblp_neo4j.py  ingest_s2ag_abstracts.py  ingest_standalone.py  parse_ccf_pdf.py  patch_venue_names.py  process_openalex_snapshot.py  supplement_abstracts.py  test_parse.py
deployment/: docker-compose.yml
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/chat/: page.tsx
frontend/src/app/(main)/prompts/: page.tsx
frontend/src/app/(main)/trace/: page.tsx
frontend/src/app/api/chat/stream/: route.ts
frontend/src/app/api/prompts/: route.ts
frontend/src/app/api/prompts/[id]/versions/: route.ts
frontend/src/app/api/traces/[runId]/: route.ts
frontend/src/app/api/traces/runs/: route.ts
frontend/src/components/: providers.tsx
frontend/src/components/chat/: chat-interface.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/prompts/: prompt-manager.tsx
frontend/src/components/trace/: trace-flow.tsx
frontend/src/hooks/: use-chat.ts  use-prompts.ts  use-trace.ts
frontend/src/lib/: api-client.ts
